# Enterprise-Retail-Strategic-Inventory-System

./: README.md  api.json  ersis.sql  implementation_plan.md
backend/: .gitignore  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/routes/: auth.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  enums.py  models.py  user.py
backend/app/routers/: admin.py  auth.py  products.py  transactions.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/utils/: __init__.py  helpers.py
frontend-web/: index.html  package-lock.json  vite.config.js
frontend-web/src/: App.jsx  main.jsx  package-lock.json  package.json
frontend-web/src/components/: ChatbotButton.jsx
frontend-web/src/components/common/: index.jsx
frontend-web/src/context/: AdminContext.jsx  AppContext.jsx  AuthContext.jsx  CashierContext.jsx
frontend-web/src/data/: mockData.js
frontend-web/src/hooks/: useSearch.js  useService.js
frontend-web/src/layouts/: AdminLayout.jsx  AdminNavbar.jsx  AdminSidebar.jsx  CashierLayout.jsx  CashierSettingsLayout.jsx  CashierSidebar.jsx  CashierTopbar.jsx
frontend-web/src/pages/admin/: AI.jsx  AddDiscount.jsx  AddProduct.jsx  AddStaff.jsx  AddStock.jsx  S1.jsx  (+28 more)
frontend-web/src/services/: apiClient.js  authService.js  customerService.js  discountService.js  orderService.js  productService.js  staffService.js  storeService.js  supplierService.js  transactionService.js
frontend-web/src/styles/: index.css
frontend-web/src/utils/: exportData.js  fakeApi.js
(+50 files in other folders)
